[package]
name = "rtl-sdr"
version = "0.1.1"
authors = ["Joseph Poirier <jdpoirier@gmail.com>"]
repository = "https://github.com/jpoirier/rust-rtlsdr"
homepage = "https://github.com/jpoirier/rust-rtlsdr"
description = "Rust wrapper for librtlsdr."
readme = "README.md"
keywords = ["SDR", "ffi", "rtlsdr", "rtl-sdr"]
license = "MIT"

[lib]
name = "rtlsdr"
path = "src/lib.rs"
test = false
doctest = false
bench = false
doc = true
plugin = false

[[bin]]
name = "ex1"
path = "examples/ex1.rs"
test = false
doctest = false
bench = false
doc = false
