[package]
name = "rtl-sdr"
version = "0.1.6"
authors = ["Joseph Poirier <jdpoirier@gmail.com>"]
repository = "https://github.com/jpoirier/rust-rtlsdr"
homepage = "https://github.com/jpoirier/rust-rtlsdr"
description = "Rust wrapper for librtlsdr."
documentation = "https://jpoirier.github.io/rust-rtlsdr/rtlsdr"
readme = "README.md"
keywords = ["SDR", "ffi", "rtlsdr", "rtl-sdr"]
license = "MIT/Apache-2.0"

[lib]
name = "rtlsdr"
path = "src/lib.rs"
test = false
doctest = false
bench = false
doc = true
plugin = false

[[bin]]
name = "ex1"
path = "examples/ex1.rs"
test = false
doctest = false
bench = false
doc = false
